# model/newsletter.go
@@ -6,12 +6,18 @@ import (
 	"errors"
 	"log"
 	"log/slog"
+	"reflect"
 	"time"
 
 	"github.com/google/uuid"
 	"mailchump/gen"
 	"mailchump/pgdb"
 )
+
+func init() {
+	// Generates SQL queries using reflection only once at startup. This avoids having
+	// to manually write out
+}
 
 var (
 	ErrNewsletterAlreadyExists = errors.New("newsletter already exists")
@@ -21,12 +27,11 @@ var (
 
 type Newsletters []Newsletter
 
-// GetAllNewsletters fetches the entire newsletters table from the database.
-func (n *Newsletters) GetAllNewsletters(ctx context.Context, db *sql.DB) error {
-	// TODO show hidden newsletters to the owner
+// GetAll fetches the entire newsletters table from the database.
+func (n *Newsletters) GetAll(ctx context.Context, db *sql.DB) error {
 	// Fetch entire newsletters table
 	rows, err := db.QueryContext(ctx,
-		`SELECT id, owner, title, slug, description, created, updated, post_count, hidden, deleted, recovery_window
+		`SELECT 
 		FROM newsletters
 		WHERE deleted = false`,
 	)
@@ -35,15 +40,34 @@ func (n *Newsletters) GetAllNewsletters(ctx context.Context, db *sql.DB) error {
 	}
 	defer pgdb.HandleCloseResult(rows)
 
-	// Scan the rows into a slice of Newsletters
 	for rows.Next() {
-		var o Newsletter
-		if err = rows.Scan(&o.Id, &o.OwnerID, &o.Title, &o.Slug, &o.Description, &o.Created, &o.Updated, &o.PostCount, &o.Hidden, &o.Deleted, &o.RecoveryWindow); err != nil {
-			slog.Warn("failed to scan newsletter; schema issue", "error", err)
-			return err
+		newsletter := Newsletter{}
+
+		s := reflect.ValueOf(&newsletter).Elem()
+		numCols := s.NumField()
+		columns := make([]interface{}, numCols)
+		for i := 0; i < numCols; i++ {
+			field := s.Field(i)
+			columns[i] = field.Addr().Interface()
 		}
-		*n = append(*n, o)
+
+		err := rows.Scan(columns...)
+		if err != nil {
+			log.Fatal(err)
+		}
+
+		*n = append(*n, newsletter)
 	}
+
+	// Scan the rows into a slice of Newsletters
+	//for rows.Next() {
+	//	var o Newsletter
+	//	if err = rows.Scan(&o.Id, &o.OwnerID, &o.Title, &o.Slug, &o.Description, &o.Created, &o.Updated, &o.PostCount, &o.Hidden, &o.Deleted, &o.RecoveryWindow); err != nil {
+	//		slog.Warn("failed to scan newsletter; schema issue", "error", err)
+	//		return err
+	//	}
+	//	*n = append(*n, o)
+	//}
 
 	// Check for errors during rows.Next
 	if err = rows.Close(); err != nil {
@@ -54,12 +78,12 @@ func (n *Newsletters) GetAllNewsletters(ctx context.Context, db *sql.DB) error {
 	return nil
 }
 
-func (n *Newsletters) ToResponse() []gen.NewsletterResponse {
+func (n *Newsletters) ToResponse() *[]gen.NewsletterResponse {
 	var resp []gen.NewsletterResponse
 	for _, newsletter := range *n {
 		resp = append(resp, newsletter.ToResponse())
 	}
-	return resp
+	return &resp
 }
 
 type Newsletter struct {
@@ -79,7 +103,7 @@ type Newsletter struct {
 
 // Validate performs runtime checks on Newsletter fields.
 func (n *Newsletter) Validate() error {
-	// TODO
+	// TODO implement
 	return nil
 }
 
@@ -157,40 +181,6 @@ func (n *Newsletter) Create(ctx context.Context, db *sql.DB) error {
 }
 
 func (n *Newsletter) Delete(ctx context.Context, db *sql.DB) error {
-	// TODO make sure cascade delete works
-	res, err := db.ExecContext(ctx,
-		`UPDATE newsletters SET deleted = true WHERE id = $1`,
-		n.Id,
-	)
-	if err != nil {
-		if errors.Is(err, sql.ErrNoRows) {
-			return ErrNewsletterNotFound
-		}
-		return err
-	}
-
-	// Notify caller that no changes were made, may want to give user a more specific
-	// message/notification.
-	if affected, err := res.RowsAffected(); err != nil {
-		// DB driver does not support RowsAffected
-		log.Fatal(err)
-	} else if affected == 0 {
-		return ErrNoChanges
-	}
-
-	return nil
-}
-
-func (n *Newsletter) Hide(ctx context.Context, db *sql.DB) error {
-	if _, err := db.ExecContext(ctx,
-		`UPDATE newsletters SET hidden = true WHERE id = $1`,
-		n.Id,
-	); err != nil {
-		if errors.Is(err, sql.ErrNoRows) {
-			return ErrNewsletterNotFound
-		}
-		return err
-	}
-
+	// TODO implement me
 	return nil
 }
